feat: implement movie list component

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,3 +1,4 @@
 @import '../utils/index.css';
 @import '../components/status-bar.css';
 @import '../components/bottom-navbar.css';
+@import '../components/movie-list.css';
