--- a/styles/utils/general.css
+++ b/styles/utils/general.css
@@ -15,6 +15,19 @@ body {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:visited,
+a:hover,
+a:focus {
+  text-decoration: none;
+  color: #fff;
+}
+
 @media only screen and (min-width: 1024px) {
   body {
     width: 30%;
