feat: implement navbar component

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,4 +1,5 @@
 @import '../utils/index.css';
 @import '../components/status-bar.css';
-@import '../components/bottom-navbar.css';
+@import '../components/navbar.css';
 @import '../components/movie-list.css';
+@import '../components/bottom-navbar.css';
