--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,5 +1,6 @@
 @import '../utils/index.css';
 @import '../components/status-bar.css';
+@import '../components/play.css';
 @import '../components/navbar.css';
 @import '../components/movie-list.css';
 @import '../components/bottom-navbar.css';
