--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -4,3 +4,4 @@
 @import '../components/navbar.css';
 @import '../components/movie-list.css';
 @import '../components/bottom-navbar.css';
+@import '../components/search-movie.css';
