feat: implement search input component

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -6,3 +6,4 @@
 @import '../components/movie-list.css';
 @import '../components/bottom-navbar.css';
 @import '../components/search-movie.css';
+@import '../components/search-input.css';
