--- a/styles/utils/general.css
+++ b/styles/utils/general.css
@@ -53,6 +53,18 @@ a:focus {
   display: block;
 }
 
+@keyframes page-load {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 @media screen and (min-width: 500px) {
   body {
     width: 100vw;
