--- a/styles/components/bottom-navbar.css
+++ b/styles/components/bottom-navbar.css
@@ -7,8 +7,11 @@
 }
 
 .bottom-navbar__background {
-  background-color: #121212;
+  position: fixed;
+  width: 100%;
   padding: 10px 0;
+  bottom: 0;
+  background-color: #121212;
 }
 
 .bottom-navbar__button {
